other-mpol/label-existing-namespaces/.chainsaw-test/exception/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: exception-namespace
  annotations: {trigger: "true"}
